<resources>
    <string name="app_name">githubusers</string>

    <string name="lbl_error_information">Não foi possível carregar as informações. \n Toque aqui para recarregar.</string>
    <string name="lbl_error_information_detail">Não foi possível carregar as informações.</string>
    <string name="label_user_fragment">Users</string>
    <string name="label_user_detail_fragment">User Detail</string>
    <string name="label_user_repos_fragment">User Repos</string>
    <string name="label_search_fragment">Buscar usuário</string>

    <string name="label_toolbar_main_title">Listagem de usuários GitHub</string>
    <string name="label_toolbar_title">Detalhes</string>
    <string name="label_info_followers">Seguidores</string>
    <string name="label_info_following">Seguindo</string>
    <string name="label_info_repos">Repositorios</string>
    <string name="label_info_watch">Vendo</string>
    <string name="label_info_fork">Forks</string>
    <string name="label_info_star">Estrelas</string>


</resources>