<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRecycleViewRepos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:padding="8dp"
    android:background="@drawable/bg_border_gray">

    <TextView
        android:id="@+id/tvRepoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nome Repositorio" />

    <TextView
        android:id="@+id/tvReposLang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Linguagem" />

    <TextView
        android:id="@+id/tvWatchersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_eyes"
        android:text="@string/label_info_watch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRepoName"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/tvWatchers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvWatchersCount"
        app:layout_constraintStart_toEndOf="@+id/tvWatchersCount"
        app:layout_constraintTop_toTopOf="@+id/tvWatchersCount"
        tools:text="000" />

    <TextView
        android:id="@+id/tvForksCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_fork"
        android:drawablePadding="4dp"
        android:text="@string/label_info_fork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWatchersCount"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/tvReposForksCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvForksCountLabel"
        app:layout_constraintStart_toEndOf="@+id/tvForksCountLabel"
        app:layout_constraintTop_toTopOf="@+id/tvForksCountLabel"
        tools:text="000" />

    <TextView
        android:id="@+id/tvStarsCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_star"
        android:drawablePadding="4dp"
        android:text="@string/label_info_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForksCountLabel"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/tvReposStarsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvStarsCountLabel"
        app:layout_constraintStart_toEndOf="@+id/tvStarsCountLabel"
        app:layout_constraintTop_toTopOf="@+id/tvStarsCountLabel"
        tools:text="000" />

    <ImageView
        android:id="@+id/ivLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tvReposLang"
        app:layout_constraintEnd_toStartOf="@+id/tvReposLang"
        app:layout_constraintTop_toTopOf="@+id/tvReposLang"
        app:srcCompat="@drawable/ic_circle"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>

